fix styling issue on mobile

--- a/app/stack-list/stack-list.css
+++ b/app/stack-list/stack-list.css
@@ -1,6 +1,6 @@
 .stack-list-image {
     background: white;
     margin: auto;
-    width: 240px;
-    height: 240px;
+    max-width: 240px;
+    max-height: 240px;
 }
